src/modules/components/shiny-card/styles.css
.container {
  width: 100%;
  height: 120px;
  min-height: 120px;
  overflow: hidden;
  border-radius: var(--border-radius);
  display: grid;
  --last-column: 0;
  grid-template-columns: [sprite] 112px [identity] 1fr [misc] auto [note] var(--last-column);
  grid-template-rows: 1fr [identity] auto 1fr [capture] auto 1fr;
  position: relative;
  padding: 4px;
  box-sizing: border-box;
}


/**
 * Sprite & menu
 */

pokemon-sprite,
.menu {
  grid-column: sprite;
  grid-row: 1 / -1;
  --size: 112px;
  width: var(--size);
  height: var(--size);
  display: grid;
  place-items: center;
  --distance-to-parent-border: 4px;
  border-radius: var(--sub-border-radius);
}

/*pokemon-sprite,
.menu {
  --elevation-opacity: var(--elevation-2-opacity);
}*/

pokemon-sprite:not([dexid]),
pokemon-sprite:not([dexid]) ~ * {
  display: none;
}

.menu > button {
  margin: 0;
}

.menu > button:not(:focus, :hover, :active) {
  --state-opacity: 0;
}

[data-action="restore"] {
  display: none;
}

.pokemon-notes,
.menu {
  pointer-events: none;
  opacity: 0;
  transform: translate3d(50px, 0, 0);
  transition: transform .1s var(--easing-accelerate),
              opacity .1s var(--easing-accelerate);
}

.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 8px;
  transform: translate3d(-50px, 0, 0);
  --surface-opacity: .5;
  /*--elevation-opacity: calc(var(--surface-opacity) * var(--elevation-2-opacity));*/
}

:host([open]) .pokemon-notes,
:host([open]) .menu {
  pointer-events: initial;
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: transform .1s var(--easing-decelerate),
              opacity .1s var(--easing-decelerate);
}


/**
 * Pokémon identity: name, species, icons, menu button
 */

.pokemon-infos__identity {
  grid-row: identity;
  grid-column: identity;
  display: grid;
  grid-template-rows: [name] 32px [species] auto;
  grid-template-columns: [ball] 32px [name] fit-content(100%) [icons] auto;
  position: relative;
  left: -16px;
  align-items: center;
  line-height: initial;
}

/* Ball */

[data-type="ball"] {
  grid-row: name;
  grid-column: ball;
  transition: transform .2s var(--easing-decelerate);
  transform: translate(0) rotate(0);
}

:host([open]) [data-type="ball"] {
  transition: transform .11s var(--easing-accelerate);
  transform: translate(20px) rotate(120deg);
}

/* Name & species */

[data-type="species"],
[data-type="forme"] {
  grid-row: species;
  grid-column: name;
  opacity: .8;
  display: block;
  position: relative;
  left: 8px;
  top: -6px;
  white-space: nowrap;
}

[data-type="forme"]::first-letter {
  text-transform: uppercase;
}

[data-type="name"],
[data-type="name"]:empty ~ [data-type="species"] {
  grid-row: name;
  grid-column: name;
  opacity: 1;
  display: flex;
  justify-content: start;
  align-items: center;
  position: relative;
  left: 0;
  top: 0;
  text-shadow: 1px 1px rgb(var(--surface-variant));
  z-index: 1;
  white-space: nowrap;
  overflow: hidden;
}

[data-type="name"]:empty ~ [data-type="forme"],
[data-type="name"]:not(:empty) ~ [data-type="species"] {
  grid-column: name / -1;
}

[data-type="name"]:empty,
[data-type="name"]:not(:empty) ~ [data-type="forme"] {
  display: none;
}

/* Icons */

.identity-icons {
  grid-row: name;
  grid-column: icons;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: 4px;
}

[data-type="gene"] {
  scale: .9;
}

[data-type="originalTrainer"],
[data-type="originMark"] {
  scale: .8;
  filter: invert(var(--dark-coeff));
}

/* Menu button */

.menu-hint {
  color: rgb(var(--on-surface-variant), .8);
}

button.icon-button.menu-hint {
  width: 32px;
  height: 32px;
  min-height: 32px;
  margin: 0;
}

button.icon-button.menu-hint::before {
  display: none; /* not needed since the whole card is clickable */
}

.menu-hint:not(:hover, :active) {
  --state-opacity: 0 !important;
}

/*[data-type="gene"].icones.explain {
  margin: 3px 5px;
}*/

/*.pokemon-infos__misc {
  grid-row: 1 / span 2;
  grid-column: misc;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  align-self: start;
  justify-self: end;
  margin: 10px;
}*/


/**
 * Capture data: game, method, date, shiny rate
 */

.pokemon-infos__capture {
  grid-row: capture;
  grid-column: identity;
  display: grid;
  grid-template-columns: [game] 32px [info] auto [rate] 1fr;
  grid-template-rows: [method] auto [date] auto [details] auto;
  gap: 0 5px;
  margin-inline: 16px;
  line-height: initial;
  align-items: center;
}

/* Game */

.pokemon-infos__capture > [data-type="game"] {
	grid-row: method / details;
  grid-column: game;
}

/* Method */

.pokemon-infos__capture > [data-type="method"] {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

/* Shiny rate */

.shiny-rate {
  grid-row: method / details;
  grid-column: rate;
  /*grid-row: capture / span 2;
  grid-column: misc;*/
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 20px;
  gap: 4px;
  padding: 2px 8px;
  margin: 0;
  line-height: initial;
  height: fit-content;
  align-self: center;
  justify-self: end;
  border-radius: 20px;
  position: relative;
  --hue-min: 20;
  --hue-max: 130;
  background: hsl(calc(var(--hue-min) + var(--hue-coeff) * (var(--hue-max) - var(--hue-min))), 50%, 50%);
}

.full-odds {
  background: repeating-linear-gradient(-45deg, 
    hsl(2,80%,50%) 0, 
    hsl(24,100%,50%) 5px, 
    hsl(39,100%,50%) 10px, 
    hsl(70,100%,50%) 15px, 
    hsl(158,100%,50%) 20px, 
    hsl(230,70%,50%) 25px, 
    hsl(252,100%,70%) 30px, 
    hsl(2,80%,50%) 35px
  );
}

.charm-odds {
  background: repeating-linear-gradient(-45deg, 
    mediumslateblue 0, 
    cyan 5px, 
    white 10px, 
    cyan 15px, 
    mediumslateblue 20px
  );
}

.one-odds {
  background: white;
}

.unknown-odds {
  background: transparent;
}

.shiny-rate-background {
  position: absolute;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  opacity: 1;
  top: 2px;
  left: 2px;
  border-radius: 20px;
}

.shiny-rate.with-charm {
  grid-template-columns: auto auto;
}

.shiny-rate :is(.shiny-charm, .shiny-rate-data) {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}

.shiny-rate:not(.with-charm) > .shiny-charm {
  display: none;
}

.shiny-rate.unknown-odds :is(.shiny-charm, .shiny-rate-data) {
  display: none;
}

.shiny-charm {
  grid-row: 1;
  grid-column: 1;
}

.shiny-charm > .icon {
  margin-bottom: -5px;
  margin-left: -14px;
  margin-top: -10px;
  margin-right: -7px;
}

.shiny-rate-text {
  color: rgb(var(--on-surface-variant));
  font-size: 1em;
}

.numerator.shiny-rate-text {
  font-size: .5em;
  position: absolute;
  top: 0;
  left: 0;
}

.separator.shiny-rate-text {
  opacity: .6;
  margin: 0 1px 0 3px;
  font-size: 1em;
}

/* Method details (if enabled in the main card) */

.pokemon-infos__capture > .count-container {
  grid-row: details;
  grid-column: 1 / -1;
  margin: 7px -12px 0;
  --padding-inline: 4px;
  padding: var(--padding-inline) calc(3 * var(--padding-inline));
  --distance-to-parent-border: 4px;
  border-radius: var(--sub-border-radius);
  --text-color: var(--on-surface-variant);
}

.pokemon-infos__capture > .count-container > .arrow {
  position: absolute;
  left: calc(50% - 7px);
  top: -6px;
  height: 7px;
  width: 14px;
  clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
  --surface-color: inherit;
  --text-color: inherit;
}


/**
 * Notes & method details (if disabled in main card)
 */

.pokemon-notes {
  grid-row: 1 / -1;
  grid-column: identity / -1;
  box-sizing: border-box;
  display: flex;
  width: 100%;
  height: 100%;
  max-height: 100%;
  font-size: 1em;
  text-align: left;
  line-height: 20px;
  padding: 0 4px 0 12px;
  z-index: 4;
  overflow: visible;
  scrollbar-width: thin;
  position: relative;
}

.pokemon-notes__arrow {
  display: none;
  position: absolute;
  width: 7px;
  height: 14px;
  top: calc(50% - 7px);
  left: -6px;
  clip-path: polygon(0% 50%, 100% 0%, 100% 100%);
}

.pokemon-notes__texte {
  margin: auto;
  max-height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: thin;
  padding-right: .5ch;
  width: 100%;
}

.pokemon-notes__texte > p {
  margin: 0;
}

.empty {
  color: rgb(var(--on-surface-variant), .5);
}

.spacer {
  flex-grow: 1;
}

@container section-contenu (min-width: 650px) {
  .container {
    --last-column: auto;
  }

  .pokemon-notes {
    grid-column: note / -1;
    opacity: 1;
    transform: none;
    width: min(100cqi - 400px, 50cqi);
    max-height: 112px;
    /*--elevation-opacity: var(--elevation-2-opacity);*/
    --surface-color: var(--surface-container-low);
    --distance-to-parent-border: 4px;
    border-radius: var(--sub-border-radius);
    padding: 4px 8px 4px 12px;
  }

  .pokemon-notes__arrow {
    display: block;
  }

  .pokemon-notes,
  :host([open]) .pokemon-notes {
    transition: none;
  }

  :host([open]) [data-type="ball"] {
    transform: translate(0) rotate(0);
  }
}

